--- a/_config.yml
+++ b/_config.yml
@@ -63,20 +63,7 @@ plugins:
   - jekyll-titles-from-headings
 collections_dir: pages
 collections:
-  articles:
-    output: true
-  spring:
-    output: true
-  devops:
-    output: true
-  gh-pages:
-    output: true
-  # 帮助
-  help:
-    output: true
-  oauth:
-    output: true
-  post:
+  projects:
     output: true
 defaults:
   - scope:
