--- a/_data/sidebar/projects.yml
+++ b/_data/sidebar/projects.yml
@@ -1,12 +1,21 @@
 logo: /assets/images/logos/spring.svg
 name: DevOps
 menus:
+  - id: final-annotation
+    icon: alternate_email
+    name: 'Final Annotation'
+    menus:
+      - id: final-annotation-core
+        name: 'Final Annotation Core'
   - id: final-framework
     icon: home
     name: 'Final Framework'
   - id: final-data
     icon: save
     name: 'Final Data'
+    menus:
+      - id: final-data-mybatis
+        name: Final Data Mybatis
   - id: final-boot
     icon: do_not_disturb_on_total_silence
     name: 'Final Boot'
