--- a/_config.yml
+++ b/_config.yml
@@ -42,9 +42,8 @@ pagination:
   enabled: true
   collection: 'posts'
   per_page: 1
-  permalink: '/blogs/:num/index.html'
+  permalink: '/:num/index.html'
   extension: html
-  indexpage: '/blogs'
 permalink: /:collection/:categories/:year/:month/:day/:title:output_ext
 
 sass:
