--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ pagination:
   enabled: true
   collection: 'posts'
   per_page: 10
+  sort_field: 'date'
+  sort_reverse: true
   permalink: '/:num/index.html'
   extension: html
 permalink: /:collection/:categories/:year/:month/:day/:title:output_ext
