--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Show Docker info
         run: docker version
       - name: Login to Docker
-        run: sudo docker login -u  ${{ secrets.DOCKER_USERNAME }}  -p  ${{ secrets.DOCKER_PASSWORD }}  ccr.ccs.tencentyun.com
+        run: sudo docker login -u  ${{ secrets.DOCKER_USERNAME }}  -p  ${{ secrets.DOCKER_PASSWORD }}  ${{ secrets.DOCKER_URL }}
       - name: Build and push
         run: |
           sha=${{ github.sha }}
@@ -65,9 +65,9 @@ jobs:
           echo "docker build..."
           docker build -t ifinal-io:$tag .
           echo "docker tag..."
-          sudo docker tag ifinal-io:$tag ccr.ccs.tencentyun.com/ifinal/ifinal-io:$tag
+          sudo docker tag ifinal-io:$tag ${{ secrets.DOCKER_URL }}/ifinal/ifinal-io:$tag
           echo "docker push..."
-          sudo docker push ccr.ccs.tencentyun.com/ifinal/ifinal-io:$tag
+          sudo docker push ${{ secrets.DOCKER_URL }}/ifinal/ifinal-io:$tag
           echo "finish..."
           echo "deploy:${tag}"
 
