--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ defaults:
   - scope:
       path: ""
     values:
-      author: ilikly
+      author: iimik
       banner: https://source.unsplash.com/random/1880x400
   - scope:
       path: help
