--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,8 @@
-ilikly:
-  name: 二月半
+iimik:
+  name: 程序员米克
   avatar: https://avatars.githubusercontent.com/u/26331697
   position: 软件工程师
   company: 多点生活
   location: 成都，中国
-  github: ilikly
-  github-follow: https://github.com/ilikly
+  github: iimik
+  github-follow: https://github.com/iimik
